# SZE-MOSZE-2020-plusplusplus

./: .gitignore  Damage.h  Damage_8h_source.html  Dockerfile  Game.cpp  Game.h  Game_8h_source.html  Hero.cpp  Hero.h  Hero_8h_source.html  JSON.cpp  JSON.h  JSON_8h_source.html  Location.cpp  Location.h  Location_8h_source.html  Makefile  Map.cpp  Map.h  Map_8h_source.html  MarkedMap.cpp  MarkedMap.h  MarkedMap_8h_source.html  Monster.cpp  Monster.h  Monster_8h_source.html  PreparedGame.cpp  PreparedGame.h  PreparedGame_8h_source.html  README.md  Report.md  Unit.cpp  Unit.h  Unit_8h_source.html  annotated.html  autotoc_md0.html  autotoc_md21.html  classGame-members.html  classGame.html  classGame_1_1AlreadyHasHeroException-members.html  (+157 more)
.github/: Test.yml
maps/: map1.txt  map2.txt  map3.txt
prepare/: expected_results.csv  prepare1.json
renderer/: Corner.cpp  Corner.h  HeroSVGRenderer.cpp  HeroSVGRenderer.h  HeroTextRenderer.cpp  HeroTextRenderer.h  ObserverSVGRenderer.cpp  ObserverSVGRenderer.h  ObserverTextRenderer.cpp  ObserverTextRenderer.h  Renderer.h  SVGRenderer.cpp  SVGRenderer.h  TextRenderer.cpp  TextRenderer.h
scenarios/: expected_results.csv  scenario1.json  scenario2.json
scripts/: run_code_analysis_primary.sh  run_code_analysis_secondary.sh  run_memory_leak_check.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_15.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  (+46 more)
tests/: CMakeLists.txt  JSONTest.cpp  gameTest.cpp  heroTest.cpp  jsonTest.cpp  mapTest.cpp  monsterTest.cpp  playerTest.cpp  rendererTest.cpp  unitTest.cpp
(+13 files in other folders)
